--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,7 @@
 .header {
-    color : red;
+    display: flex;
+    align-items : center;
+    justify-content:space-around;
+    padding : 20px;
+    border : 1px solid lightgrey;
 }
