--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,19 @@
     display: flex;
     align-items : center;
     justify-content:space-around;
-    padding : 20px;
+    padding : 30px;
     border : 1px solid lightgrey;
+}
+
+.header__mid {
+    display : flex;
+    align-items : center;
+    justify-content:space-between;
+}
+
+.header__mid__content {
+    display : flex;
+    align-items : center;
+    justify-content:space-between;
+    padding-right : 30px;
 }
