--- a/src/Header.css
+++ b/src/Header.css
@@ -4,6 +4,10 @@
     justify-content:space-around;
     padding : 30px;
     border : 1px solid lightgrey;
+    position : sticky;
+    top : 0;
+    z-index : 100;
+    background-color: white;
 }
 
 .header__mid {
