--- a/src/Product.css
+++ b/src/Product.css
@@ -10,6 +10,8 @@
     width : 100%;
     background-color: white;
     z-index : 1;
+    border : 1px solid black;
+    border-radius : 10px;
 }
 
 
