view all button

--- a/src/Product.css
+++ b/src/Product.css
@@ -6,6 +6,7 @@
     max-height: 400px;
     min-width : 100px;
     margin : 10px;
+    margin-right : 50px;
     padding : 20px;
     width : 100%;
     background-color: white;
