--- a/src/Button.css
+++ b/src/Button.css
@@ -1,3 +1,10 @@
 .view {
     text-align: center;
 }
+
+.view > button {
+    padding : 10px;
+    padding-right : 15px;
+    padding-left : 15px;
+    border-radius: 10px;
+} 
