--- a/src/Product.css
+++ b/src/Product.css
@@ -13,6 +13,8 @@
     z-index : 1;
     border : 1px solid black;
     border-radius : 10px;
+    padding-right: 50px;
+    padding-left: 50px;
 }
 
 
